# glop

./: .gitignore  CMakeLists.txt
res/: test.fsh  test.vsh
src/: arr.c  arr.h  err.c  err.h  glop.c  glop.h  hash.h  main.c  map.c  map.h  typedefs.h
src/lib/glad/: glad.c  glad.h
